--- a/style.css
+++ b/style.css
@@ -1,25 +1,27 @@
 body {
-  background-color:black;
+  background-color: black;
   font-family: monospace;
 }
 
 .headings {
   text-align: center;
   color: whitesmoke;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding: 40px 0;
 }
+
 h1 {
   font-size: 40px;
-  padding-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 h2 {
   font-size: 20px;
 }
+
 .options {
   text-align: center;
 }
+
 #choices {
   padding-top: 20px;
   color: whitesmoke;
@@ -27,6 +29,7 @@ h2 {
   text-align: center;
   font-family: monospace;
 }
+
 .results {
   color: whitesmoke;
   padding-top: 40px;
@@ -40,8 +43,9 @@ h2 {
   margin-bottom: 5px;
   font-size: 0;
   border-radius: 50%;
+  transition: transform 0.2s ease-in-out;
 }
 
 .buttons:hover {
-scale: 1.1;
+  transform: scale(1.1);
 }
